--- a/Carrossel/historia.html
+++ b/Carrossel/historia.html
@@ -29,11 +29,11 @@
       font-size: 16px;
     }
     body {
-      font-family: 'Open Sans', Arial, sans-serif;
-      background-color: #ffffff;
-      color: #000000;
-      line-height: 1.6;
-    }
+  font-family: 'Open Sans', Arial, sans-serif;
+  background: url("imagens/fundo_historia.png") center center / cover no-repeat;
+  color: #000000;
+  line-height: 1.6;
+}
     a {
       text-decoration: none;
       color: inherit;
@@ -174,7 +174,7 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      min-height: 60vh;
+      min-height: 100vh;
       text-align: center;
       overflow: hidden;
       color: #fff;
@@ -209,11 +209,14 @@
     }
 
     /* CONTEÚDO DA HISTÓRIA */
-    .historia-container {
-      max-width: 800px;
-      margin: 30px auto;
-      padding: 0 20px;
-    }
+  .historia-container {
+  max-width: 800px;
+  margin: 30px auto;
+  padding: 20px;
+  background: rgba(255, 255, 255, 0.8); /* Fundo branco semi-transparente */
+  border-radius: 10px; /* Bordas arredondadas para um design mais agradável */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sombra suave para destacar a caixa */
+}
     .historia-container img {
       max-width: 100%;
       border-radius: 8px;
@@ -227,11 +230,13 @@
       font-size: 1.8rem;
       text-align: center;
     }
-    .texto-historia {
-      margin-bottom: 20px;
-      line-height: 1.6;
-      white-space: pre-line; /* para respeitar quebras */
-    }
+ .texto-historia {
+  margin-bottom: 20px;
+  line-height: 1.6;
+  white-space: pre-line; /* Mantém as quebras de linha */
+  text-align: justify; /* Justifica o texto */
+  color: #b2916c; /* Define a cor do texto */
+}
     .botoes-acao {
       display: flex;
       gap: 10px;
