--- a/Carrossel/historia.html
+++ b/Carrossel/historia.html
@@ -300,13 +300,21 @@
       .donate-float-mobile {
         display: block;
       }
-      .historia-container {
-        padding: 0 10px;
-      }
-      .titulo-historia {
-        font-size: 1.5rem;
-      }
-    }
+.historia-container {
+  padding: 20px; /* Adiciona mais espaço interno para melhor legibilidade */
+  max-width: 800px; /* Mantém a largura máxima */
+  margin: 30px auto; /* Centraliza o container na página */
+  background: rgba(255, 255, 255, 0.5); /* Fundo branco mais transparente (50%) */
+  border-radius: 10px; /* Bordas arredondadas */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05); /* Sombra mais sutil */
+}
+   .titulo-historia {
+  font-size: 1.8rem; /* Aumenta um pouco o tamanho do título */
+  font-weight: bold; /* Deixa o título mais destacado */
+  color: #b2916c; /* Define a mesma cor do texto */
+  text-align: center; /* Centraliza o título */
+  margin-bottom: 20px; /* Adiciona espaçamento abaixo do título */
+}
 
     @media (max-width: 480px) {
       html {
