--- a/Carrossel/historia.html
+++ b/Carrossel/historia.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#658161" />
-  <title id="page-title">Fundação Hannah</title>
+  <!-- (1) Título atualizado -->
+  <title id="page-title">Histórias do Campo Missionário</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,11 +30,11 @@
       font-size: 16px;
     }
     body {
-  font-family: 'Open Sans', Arial, sans-serif;
-  background: url("imagens/fundo_historia.png") center center / cover no-repeat;
-  color: #000000;
-  line-height: 1.6;
-}
+      font-family: 'Open Sans', Arial, sans-serif;
+      background: url("imagens/fundo_historia.png") center center / cover no-repeat;
+      color: #000000;
+      line-height: 1.6;
+    }
     a {
       text-decoration: none;
       color: inherit;
@@ -167,19 +168,21 @@
       background-color: var(--fundo-claro);
     }
 
-    /* HERO (para manter estilo) */
+    /* HERO */
+    /* (2) Tornar a imagem do hero em tela cheia + parallax */
     #hero {
       position: relative;
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      height: 100vh; /* Ocupa toda a tela visível */
       text-align: center;
       overflow: hidden;
       color: #fff;
       margin-top: 70px; /* para não ficar atrás do header fixo */
       background: url("imagens/fundoimpacto.png") center center / cover no-repeat;
+      background-attachment: fixed; /* Efeito parallax */
     }
     #hero .hero-text {
       position: relative;
@@ -209,34 +212,41 @@
     }
 
     /* CONTEÚDO DA HISTÓRIA */
-  .historia-container {
-  max-width: 800px;
-  margin: 30px auto;
-  padding: 20px;
-  background: rgba(255, 255, 255, 0.9); /* Fundo branco semi-transparente */
-  border-radius: 10px; /* Bordas arredondadas para um design mais agradável */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sombra suave para destacar a caixa */
-}
+    /* (3) Container totalmente transparente */
+    .historia-container {
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 20px;
+      background: transparent; /* total transparência */
+      border-radius: 0;
+      box-shadow: none;        /* sem sombra */
+    }
     .historia-container img {
       max-width: 100%;
       border-radius: 8px;
       margin-bottom: 20px;
     }
+    /* (4) Título com a mesma cor do texto (#b2916c) */
     .titulo-historia {
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
-      color: var(--primaria);
+      color: #b2916c;
       margin-bottom: 20px;
       font-size: 1.8rem;
       text-align: center;
     }
- .texto-historia {
-  margin-bottom: 20px;
-  line-height: 1.6;
-  white-space: pre-line; /* Mantém as quebras de linha */
-  text-align: justify; /* Justifica o texto */
-  color: #b2916c; /* Define a cor do texto */
-}
+    /* (5) Ajuste de justificação + (6) Espaço de parágrafo (indentação) */
+    .texto-historia {
+      margin-bottom: 20px;
+      line-height: 1.6;
+      text-align: justify;
+      color: #b2916c;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      hyphens: auto;
+      white-space: normal;   /* remove pre-line para evitar espaços grandes */
+      text-indent: 2em;      /* indentação na 1ª linha de cada parágrafo */
+    }
     .botoes-acao {
       display: flex;
       gap: 10px;
@@ -299,15 +309,15 @@
       }
       .donate-float-mobile {
         display: block;
-      }   
-      .titulo-historia {
-       font-size: 1.8rem; /* Aumenta um pouco o tamanho do título */
-       font-weight: bold; /* Deixa o título mais destacado */
-       color: #b2916c; /* Define a mesma cor do texto */
-       text-align: center; /* Centraliza o título */
-       margin-bottom: 20px; /* Adiciona espaçamento abaixo do título */
       }
-}
+      .titulo-historia {
+        font-size: 1.8rem; /* Aumenta um pouco o tamanho do título */
+        font-weight: bold; /* Deixa o título mais destacado */
+        color: #b2916c; /* Define a mesma cor do texto */
+        text-align: center; /* Centraliza o título */
+        margin-bottom: 20px; /* Adiciona espaçamento abaixo do título */
+      }
+    }
     @media (max-width: 480px) {
       html {
         font-size: 14px;
@@ -356,7 +366,7 @@
   Doe Agora
 </button>
 
-<!-- HERO (para manter a estética) -->
+<!-- HERO -->
 <section id="hero">
   <div class="hero-text">
     <h1>História Completa</h1>
