--- a/Carrossel/historia.html
+++ b/Carrossel/historia.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#658161" />
-  <!-- (1) Título atualizado -->
   <title id="page-title">Histórias do Campo Missionário</title>
 
   <!-- Google Fonts -->
@@ -168,21 +167,20 @@
       background-color: var(--fundo-claro);
     }
 
-    /* HERO */
-    /* (2) Tornar a imagem do hero em tela cheia + parallax */
+    /* HERO (tela cheia + parallax) */
     #hero {
       position: relative;
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      height: 100vh; /* Ocupa toda a tela visível */
+      height: 100vh; /* ocupa toda a tela */
       text-align: center;
       overflow: hidden;
       color: #fff;
       margin-top: 70px; /* para não ficar atrás do header fixo */
       background: url("imagens/fundoimpacto.png") center center / cover no-repeat;
-      background-attachment: fixed; /* Efeito parallax */
+      background-attachment: fixed; /* efeito parallax */
     }
     #hero .hero-text {
       position: relative;
@@ -212,7 +210,6 @@
     }
 
     /* CONTEÚDO DA HISTÓRIA */
-    /* (3) Container totalmente transparente */
     .historia-container {
       max-width: 800px;
       margin: 30px auto;
@@ -221,21 +218,31 @@
       border-radius: 0;
       box-shadow: none;        /* sem sombra */
     }
+    /* (1) Centralizar a imagem dentro do container */
     .historia-container img {
       max-width: 100%;
       border-radius: 8px;
-      margin-bottom: 20px;
+      margin: 20px auto;
+      display: block; /* garante centralização */
     }
-    /* (4) Título com a mesma cor do texto (#b2916c) */
+    /* Título principal do texto */
     .titulo-historia {
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
-      color: #b2916c;
+      color: #b2916c; /* mesma cor do texto */
       margin-bottom: 20px;
       font-size: 1.8rem;
       text-align: center;
     }
-    /* (5) Ajuste de justificação + (6) Espaço de parágrafo (indentação) */
+    /* (2) Subtítulo/versículo bíblico */
+    .versiculo-historia {
+      font-style: italic;
+      font-size: 1rem;
+      color: #b2916c;
+      text-align: center;
+      margin: 10px 0 20px 0;
+    }
+    /* Texto da história */
     .texto-historia {
       margin-bottom: 20px;
       line-height: 1.6;
@@ -244,8 +251,8 @@
       overflow-wrap: break-word;
       word-wrap: break-word;
       hyphens: auto;
-      white-space: normal;   /* remove pre-line para evitar espaços grandes */
-      text-indent: 2em;      /* indentação na 1ª linha de cada parágrafo */
+      white-space: normal;
+      text-indent: 2em; /* afastamento da margem na primeira linha */
     }
     .botoes-acao {
       display: flex;
@@ -311,11 +318,11 @@
         display: block;
       }
       .titulo-historia {
-        font-size: 1.8rem; /* Aumenta um pouco o tamanho do título */
-        font-weight: bold; /* Deixa o título mais destacado */
-        color: #b2916c; /* Define a mesma cor do texto */
-        text-align: center; /* Centraliza o título */
-        margin-bottom: 20px; /* Adiciona espaçamento abaixo do título */
+        font-size: 1.8rem;
+        font-weight: bold;
+        color: #b2916c;
+        text-align: center;
+        margin-bottom: 20px;
       }
     }
     @media (max-width: 480px) {
@@ -341,7 +348,7 @@
     <ul>
       <li><a href="index.html" id="nav-inicio">Início</a></li>
       <li><a href="impacto.html" id="nav-historias-impacto">Histórias</a></li>
-      <!-- Você pode adicionar os outros links se quiser manter idêntico ao original -->
+      <!-- Outros links, se houver -->
     </ul>
   </nav>
 
@@ -378,6 +385,10 @@
 <div class="historia-container">
   <img id="historia-img" src="imagens/placeholder.jpg" alt="Imagem da História" />
   <h1 class="titulo-historia" id="titulo-historia">Carregando título...</h1>
+
+  <!-- Subtítulo/versículo bíblico -->
+  <div class="versiculo-historia" id="versiculo-historia"></div>
+
   <div class="texto-historia" id="texto-historia">Carregando texto completo...</div>
 
   <div class="botoes-acao">
@@ -453,7 +464,7 @@
   /* FUNÇÃO PARA CARREGAR BLOCO COMPLETO (PT/EN) */
   async function carregarHistoria(id) {
     try {
-      // AJUSTE: agora buscamos "historia.txt" em vez de `${id}.txt`
+      // Agora buscamos "historia.txt" em vez de `${id}.txt`
       const url = `impacto/${id}/historia.txt`;
       const resp = await fetch(url);
       const text = await resp.text();
@@ -469,10 +480,12 @@
         document.getElementById('titulo-historia').innerText = dataPT.titulo || "Sem Título (PT)";
         document.getElementById('texto-historia').innerText = dataPT.texto || "Sem texto (PT)";
         document.getElementById('historia-img').src = `impacto/${id}/${dataPT.imagem || 'placeholder.jpg'}`;
+        document.getElementById('versiculo-historia').innerText = dataPT.versiculo || "";
       } else {
         document.getElementById('titulo-historia').innerText = dataEN.titulo || "No Title (EN)";
         document.getElementById('texto-historia').innerText = dataEN.texto || "No text (EN)";
         document.getElementById('historia-img').src = `impacto/${id}/${dataEN.imagem || 'placeholder.jpg'}`;
+        document.getElementById('versiculo-historia').innerText = dataEN.versiculo || "";
       }
     } catch (err) {
       document.getElementById('titulo-historia').innerText = "Erro ao carregar história";
@@ -492,7 +505,7 @@
   }
 
   function parseBlocoLongo(bloco) {
-    let data = { titulo: "", texto: "", imagem: "" };
+    let data = { titulo: "", texto: "", imagem: "", versiculo: "" };
     let lines = bloco.split("\n");
     let isReadingText = false;
 
@@ -510,6 +523,9 @@
         data.texto += partial + "\n";
       } else if(trimmed.startsWith("IMAGEM:") || trimmed.startsWith("IMAGE:")) {
         data.imagem = trimmed.split(":")[1].trim();
+        isReadingText = false;
+      } else if(trimmed.startsWith("VERSICULO:") || trimmed.startsWith("VERSE:")) {
+        data.versiculo = trimmed.split(":")[1].trim();
         isReadingText = false;
       } else {
         if(isReadingText) {
