--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1409,12 +1409,12 @@
       "historia1-h3": { pt: "Conhecendo GoSalim", en: "Knowing GoSalim" },
       "historia1-p": {
         pt: "Ao oferecer alimento a Salim, conhecemos sua vila, lar de refugiados birmaneses, e testemunhamos milagres providenciais...",
-        en: "By offering food to Salim, we discovered his village, home to Burmese refugees, and witnessed divine miracles..."
+        en: " By offering food to Salim, we discovered his village, home to Burmese refugees, and witnessed divine miracles..."
       },
-      "historia2-h3": { pt: "Arun", en: "Arun" },
+      "historia2-h3": { pt: "Deus se revela", en: "God Reveals Himself" },
       "historia2-p": {
-        pt: "Arun, de apenas 8 anos, frequentava o Learning Center com fome e dificuldades de aprendizado. Com nosso suporte, ele recebeu alimentação, educação de qualidade e cuidado espiritual. Hoje, Arun lê fluentemente e compartilha versículos bíblicos com sua família.",
-        en: "Arun, only 8 years old, used to attend the Learning Center hungry and struggling with his studies. With our support, he received nutritious meals, quality education, and spiritual care. Today, Arun reads fluently and shares Bible verses with his family."
+        pt: "Deus conduz a missão, revela Seu amor e age quando nos entregamos inteiramente para servi-Lo...",
+        en: "God leads the mission, reveals His love, and acts when we surrender ourselves entirely to Him...."
       },
 
       /* DEPOIMENTOS */
